2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-ict.txt: Add words.

2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add housekeeping routine to clean up dictionary.

	* src/Makefile.am, src/dummy.c -> libthai.c, src/libthai.def:
	Add destructor function in .fini section, to be called on library
	unload.

	* src/thbrk/Makefile.am, +src/thbrk/thbrk-private.h, src/thbrk/thbrk.c
	(thbrk_on_unload):
	Add on-unload function for thbrk module.

	* src/thbrk/brk-maximal.h, src/thbrk/brk-maximal.c 
	(brk_get_dict, brk_maximal_on_unload):
	  - Move 'brk_dict' static var from function to file scope
	  - Add on-unload function to clean up dictionary

2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/brk-maximal.c (brk_maximal_do): Adjust if-block a little bit.

2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{geo,ict}.txt: Add words.

2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am, +data/tdict-proper.txt, data/tdict-common.txt:
	Split proper nouns from tdict-common.txt into a new list.
	* data/tdict-{common,proper}.txt: Add words

2008-12-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am:  No need to install 'thbrk.abm' any more.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{common,geo,ict}.txt: Add words.

2008-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Switch to libdatrie 0.2. (Requires libdatrie >= 0.1.99.2)

	* configure.in:
	  - Check for 'trietool-0.2' binary instead of 'trietool'
	  - Check for 'datrie-0.2' pkg-config instead of 'datrie'

	* src/thbrk/brk-maximal.c:
	  - Replace 'SBTrie' with 'Trie'
	  - Replace 'SBTrieState' with 'TrieState'
	  - Replace 'sb_trie_*' function calls with corresponding 'trie_*'
	  - For 'sb_trie_state_walk()', also convert TIS-620 char to UCS-4
	    before actually walking
	  - For 'sb_trie_open()', replace with 'trie_new_from_file()', plus